--- a/about me.html
+++ b/about me.html
@@ -40,7 +40,7 @@ p, ul, dl {
 <table>
 
 <tr>
-<td id="a" width=300px height=300px align="center"> <img src="photo.jpg" style="height: auto; width: 75%;"></td>
+<td id="a" width=300px height=300px align="center"> <img src="photo.png" style="height: auto; width: 75%;"></td>
 
 <td rowspan="2" id="b">
 <h1> PRABHASH ACHARYA </h1>
@@ -89,5 +89,6 @@ p, ul, dl {
 </ul>
 </td>
 </tr>
+
 
 </table>
